# manager

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-compose_OLD.yml  main.py  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 7e5c15f08b0f_test_migration.py  b0f882f665dd_test_migration.py
project_manager/: base.py  base_dao.py  config.py  crud.py  db_helper.py  main.py
project_manager/data/: __init__.py  api.py  crud.py  dao.py
project_manager/project/: __init__.py  api.py  crud.py  dao.py  models.py  schemas.py
project_manager/task/: __init__.py  api.py  crud.py  dao.py  models.py  schemas.py  status.py
tests/: conftest.py  test_application.py  test_integration.py  test_integration_application.py  test_main.py  test_main_async.py  test_monkeypatch.py
