[tool.poetry]
name = "project-manager"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
pydantic-settings = "^2.7.0"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.36"
greenlet = "^3.1.1"
pydantic = "^2.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
