[tool.poetry]
name = "project-manager"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
pydantic-settings = "^2.7.0"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.36"
greenlet = "^3.1.1"
pydantic = "^2.10.4"
uvicorn = "^0.34.0"
faker = "^33.3.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.4"
isort = "^5.13.2"
flake8 = "^7.1.1"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
